--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "firebase": "^8.2.3",
+    "prettier": "^2.2.1",
     "swiper": "5.4.5",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
