--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0",
+    "vue-verification-code-input": "^1.0.0",
     "vuefire": "^2.2.5",
     "vuex": "^3.4.0"
   },
