--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^8.2.3",
     "prettier": "^2.2.1",
     "swiper": "5.4.5",
+    "video.js": "^7.10.2",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0",
