--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "v-calendar": "^2.2.0",
+    "vue-star-rating": "^1.7.0",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
